dark mode button fixed

--- a/style.css
+++ b/style.css
@@ -51,7 +51,8 @@ b {
     background-color: #007bff;
     color: white;
     cursor: pointer;
-    padding: 7px 13px;
+    width: 35px;
+    height: 35px;
     font-weight: bold;
     border-radius: 50%;
     box-shadow: 1px 1px 10px #ff00a6;
@@ -76,25 +77,29 @@ b {
     position: fixed;
     top: 20px;
     right: 20px;
-    font-size: 20px;
-    padding: 2px;
+    width: 35px;
+    height: 35px;
     background-color: #000000;
     color: #ffffff;
     border: none;
-    border-radius: 40%;
+    border-radius: 50%;
     cursor: pointer;
-    box-shadow: 0 0 10px #ffffff;
+    box-shadow: 1px 1px 10px #888;
     z-index: 1000;
     transition: background-color 0.3s, transform 0.3s;
+    display: flex;
+    align-items: center;
+    justify-content: center; /* center horizontally */
+    font-size: 18px;
 }
 
 #darkModeBtn:hover {
-    background-color: #045882;
+    background-color: #333333;
     transform: scale(1.1);
 }
 
 body.dark-mode #darkModeBtn {
-    background-color: #333;
+    background-color: #f1f1f1;
     color: #000000;
 }
 
